--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -125,6 +125,12 @@
                           <p><b>Pris per ikke-medlemsbillett:</b> {{modalInformation.pris_ikke_medlem}},-</p>
                           <p><b>Tilleggskostnader:</b> {{modalInformation.rapport.tilleggskostnader}},-</p>
                           <p><b>Fortjeneste:</b> {{modalInformation.rapport.profitt}},-</p>
+                          <div ng-show="modalInformation.rapport.kommentar != ''">
+                            <p><b>Kommentar:</b></p>
+                            <p>
+                              {{modalInformation.rapport.kommentar}}
+                            </p>
+                          </div>
                         </div>
                     </div>
                 </div>
