--- a/public/ny-rapport/ny-rapport.view.html
+++ b/public/ny-rapport/ny-rapport.view.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-md-12 col-md-offset-5">
                       <br>
-                      <button ng-click="sendBooking(booking)" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-samfundet">Send rapport</button>
+                      <button ng-click="sendBooking()" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-samfundet">Send rapport</button>
                     </div>
                   </form>
                 </div>
